# models/auth.js
@@ -1,0 +1,14 @@
+const mongoose = require('mongoose');
+
+const AuthSchema = new mongoose.Schema({
+    githubId: {
+        type: String,
+        required: true
+    },
+    userName: {
+        type: String,
+        required: true
+    }
+})
+
+module.exports = mongoose.model('Auth', AuthSchema);
