# routes/index.js
@@ -6,6 +6,7 @@ route.get('/', require('../controllers'));
 
 // Handles routes for project
 route.use('/photos', require('./photos'));
+route.use('/users', require('./users'));
 route.use('/api-docs', require('./swagger'));
 route.use('/auth/github', require('./passport'));
 
